Perspectives - More Link Alignment Fix

--- a/src/scss/partials/_maincontent.scss
+++ b/src/scss/partials/_maincontent.scss
@@ -728,6 +728,9 @@ main {
 
 .blog {
 	#main {
+		.more-link-wrapper {
+			padding-left:0;
+		}
 		.container {
 			@media (min-width: $bp-sm-min) {
 				width: 100%;
